# Client-Call-Brief

./: .bedrock_agentcore.yaml  .env.examples  .gitignore  README.md  agent.py  app.py  pyproject.toml  requirements.txt
.bedrock_agentcore/agent/: dependencies.hash
.streamlit/: secrets.toml.example
