[project]
name = "client-call-brief"
version = "0.1.0"
description = "Agentic AI demo project using Strands and AWS AgentCore"
requires-python = ">=3.12"
dependencies = [
    "bedrock-agentcore",
    "dotenv>=0.9.9",
    "streamlit",
    "streamlit-cognito-auth",
    "strands-agents",
    "strands-agents-tools",
    "tavily-python>=0.7.23",
]
